# OOPZI1

./: README.md
CMakeProject1/CMakeProject1/: CMakeLists.txt  CMakeProject1.h
Laba1/: CMakeLists.txt
Laba1/MyExecutable1/: CMakeLists.txt
Laba1/MyExecutable1/exe/: Task1.c  Task2.c  Task3.c  Task4.c  Task5_func.c  Task5_main.c  Task6_func.c  Task6_main.c  Task7_main.c  func.h
Laba1/MyExecutable1/lib/: CMakeLists.txt  Task7_func.c
Laba3/Laba3/: CMakeLists.txt  Laba3.c  Laba3.h
Laba3/Laba3/dowhile/: Header.h  task1.c  task2.c  task3.c  task4.c  task5.c  task6.c
Laba3/Laba3/for/: task1.c  task2.c  task3.c  task4.c  task5.c  task6.c
Laba3/Laba3/while/: task1.c  task2.c  task3.c  task4.c  task5.c  task6.c
Laba5/Laba5/: CMakeLists.txt  queue.cpp  queue.h  queuetemplate.h
Laba6/Laba6/: BidirectionalCircularList.h  CMakeLists.txt  Node.h  QueueBase.h  QueueBasedOnArray.h  QueueBasedOnBidirectionalCircularList.h
laba2/: CMakeLists.txt
laba2/Laba2/: CMakeLists.txt  task1.c  task2.c  task3.c
laba4/: CMakeLists.txt
laba4/laba4/: CMakeLists.txt  laba4.cpp  laba4.h  main.cpp
