# CMakeList.txt: проект CMake для Laba5; включите исходный код и определения
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник для исполняемого файла этого проекта.
add_executable (Laba5 "Laba5.cpp" "Laba5.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
