# CMakeList.txt: проект CMake для laba4; включите исходный код и определения
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник для исполняемого файла этого проекта.
add_executable (laba4 "laba4.cpp" "laba4.h" "main.cpp")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
